<package>
  <name>uwb_msgs</name>
  <version>0.1.0</version>
  <description>The uwb ranging messages</description>
  <author>Ran Liu</author>
  <maintainer email="chad@ecostechnologies.com">Ran Liu</maintainer>
  <license>BSD</license>
  <url>https://github.com/ecostech/roboteq_diff_driver.git</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
